--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     height: 550px;
 }
 
+
 .main-title{
     font-family: 'Righteous', 'cursive';
 }
@@ -64,6 +65,22 @@
 .header-element{
     padding-top: 0px;
 }
+
+
+/* SEZIONE B */
+.boxsha{
+    box-shadow: 5px 5px 20px #232323;
+}
+    
+.verylittle{
+    color: var(--main-color);
+    font-family: 'Righteous', 'cursive';         font-size: 22px;
+    height: 30px;
+    font-weight: 600;
+}
+
+
+/* MEDIA QUERY */
 
 @media screen and (min-width: 220px) {
     .maincontainer{
