--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 .maincontainer{
-    background-image: url(./media/header.jpg);
+    background-image: linear-gradient(180deg, black 25%, rgba(255,255,255,0)), url(./media/header.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0px -150px;
@@ -41,7 +41,7 @@
 .little-title{
     color: var(--main-color);
     font-family: 'Righteous', 'cursive';
-    font-size: 20px;
+    font-size: 22px;
     padding-top: 60px;
 }
 
@@ -69,16 +69,43 @@
 
 /* SEZIONE B */
 .boxsha{
-    box-shadow: 5px 5px 20px #232323;
+    box-shadow: 4px 4px 10px #a8a8a8e8;
+    border-radius: 20px;
+    width: 18rem;
+    margin-left: 40px;
 }
     
 .verylittle{
     color: var(--main-color);
-    font-family: 'Righteous', 'cursive';         font-size: 22px;
+    font-family: 'Righteous', 'cursive';
+    font-size: 18px;
     height: 30px;
-    font-weight: 600;
+    font-weight: 500;
+    margin-bottom: 0px;
 }
 
+.ggggg{
+    margin-top: 500px;
+}
+
+/* TIMELINE */
+
+.first-time-element{
+    border-right-style: solid;
+    border-width: 5px;
+    border-color: var(--main-color);
+}
+
+.first-time-element::before{
+    content: '';
+    display: inline-block;
+    background-color: black;
+    width: 25px;
+    height: 25px;
+    border-radius: 12.5px;
+    border-color: var(--main-color);
+    justify-self: flex-end;
+}
 
 /* MEDIA QUERY */
 
