--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@
 }
 
 /* SEZIONE A */
-
+/* 
 .card{
     width: 380px;
     height: 410px; 
@@ -102,7 +102,7 @@
     width: 100%;
     height: 100%;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 5%, rgba(0, 0, 0, .9) 20% , rgba(0, 0, 0, 0.4) 50% , rgba(0, 0, 0, 0.7) 80% , rgba(0, 0, 0, 0.9) 90% , rgba(0, 0, 0, 1));
-}
+} */
 
 /* SEZIONE B */
 .boxsha{
@@ -126,6 +126,11 @@
 }
 
 /* TIMELINE */
+
+.timeline-container{
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .first-time-element{
     border-right-style: solid;
@@ -218,13 +223,13 @@
     }
 
     .maincontainer{
-        height: 570px;
+        height: 600px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .maincontainer{
-        height: 580px;
+        height: 610px;
     }
     .little-title{
         font-size: 30px;
@@ -259,6 +264,10 @@
         padding-right: 30px;
         width: 50%;
     }
+
+    .row-end-elements{
+        flex-direction: row-reverse;
+    }
     
 }
 
@@ -266,6 +275,9 @@
     .little-title{
         font-size: 30px;
         padding-top: 150px;
+    }
+    .maincontainer{
+        height: 600px;
     }
 }
 
