--- a/style.css
+++ b/style.css
@@ -68,31 +68,64 @@
 
 /* SEZIONE A */
 /* 
-.card{
+.textcent{
+    width: 33%;
+    padding: 0;
+  
+  }
+  .text_cent{
+    font-size: 48px ;
+    color: #1566C0;
+  }
+  font_cent2{
+    color: #323232;
+  
+  }
+  hr.barra {
+    width:90%; 
+    height:10px; 
+    color: rgba(255, 193, 6, 1);
+    padding-left: 5px;
+    margin-bottom: 80px;
+  
+    
+  }
+  .card{
     width: 380px;
     height: 410px; 
     position: relative;
     background-size: cover;
     background-position: center;
-}
-
-#card1{
+    padding-bottom: 20px;
+    
+  }
+  .textcard{
+    padding-top: 70px;
+    padding-bottom: 20px;
+    padding-left: 25px;
+  
+  }
+  .texts{
+    padding-left: 25px;
+  }
+  #card1{
     background-image: url("./media/1.png");
-}
-
-#card2{
+  
+  }
+  #card2{
+  
     background-image: url("./media/2.png");
-}
-
-#card3{
+  
+  }
+  #card3{
+  
    background-image: url("./media/3.png");
-}
-
-#card4{
+  }
+  #card4{
     background-image: url("./media/4.png");
-}
-
-.sfumatura{
+  }
+  
+  .sfumatura{
     color: white;
     position: absolute;
     bottom: 0;
@@ -101,10 +134,50 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 5%, rgba(0, 0, 0, .9) 20% , rgba(0, 0, 0, 0.4) 50% , rgba(0, 0, 0, 0.7) 80% , rgba(0, 0, 0, 0.9) 90% , rgba(0, 0, 0, 1));
-} */
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 5%, rgba(0, 0, 0, .9) 20% , rgba(0, 0, 0, 0.4) 40% , rgba(0, 0, 0, 0.6) 60% , rgba(0, 0, 0, 0.7) 70% , rgba(0, 0, 0, 0.9) 90%);
+  } */
+
+.card{
+    height: 150px;
+    width: 150px;
+}
+
+.card-elements{
+    display: flex;
+    justify-content: center;
+}
+
+.card1{
+    background-image: linear-gradient(to bottom, #000000, #000000b2 20%, #00000042 50%, #000000b2 70%, #000000 100%), url(./media/1.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.card2{
+    background-image: linear-gradient(to bottom, #000000, #000000b2 20%, #00000042 50%, #000000b2 70%, #000000 100%), url(./media/2.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.card3{
+    background-image: linear-gradient(to bottom, #000000, #000000b2 20%, #00000042 50%, #000000b2 70%, #000000 100%), url(./media/3.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.card4{
+    background-image: linear-gradient(to bottom, #000000, #000000b2 20%, #00000042 50%, #000000b2 70%, #000000 100%), url(./media/4.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 
 /* SEZIONE B */
+
 .boxsha{
     box-shadow: 4px 4px 10px #a8a8a8e8;
     border-radius: 20px;
@@ -212,12 +285,24 @@
     .maincontainer{
         height: 520px;
     }
+    
+    .cards-row{
+        margin-top: 80px;
+    }
 }
 
 @media screen and (min-width: 300px) {
     .little-title{
         font-size: 25px;
         padding-top: 80px;
+    }
+
+    .cards-row{
+        margin-top: 40px;
+    }
+    
+    .card{
+        height: 200px;
     }
 }
 
@@ -228,6 +313,11 @@
 
     .maincontainer{
         height: 600px;
+    }
+    
+    .little-title{
+        font-size: 30px;
+        padding-top: 135px;
     }
 }
 
@@ -282,6 +372,10 @@
     }
     .maincontainer{
         height: 600px;
+    }
+
+    .cards-row{
+        margin-top: 60px;
     }
     
     .second-time-element{
