--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --main-color: #1566C0;
 }
 
-/* HEADER */
+/* HEADER + WAVE SECTION*/
 
 .top-container{
     height: 300px;
@@ -15,7 +15,6 @@
     background-position: 0px -150px;
     height: 550px;
 }
-
 
 .main-title{
     font-family: 'Righteous', 'cursive';
@@ -183,6 +182,38 @@ h5.very-little{
     height: 48px!important;
     border-radius: 12px;
     border-style: none;
+}
+
+/* SEZIONE E */
+
+.box-shad2{
+    box-shadow: 2px 2px 8px #b5b3b3af;
+    width: 40%;
+    min-width: 320px;
+    max-width: 450px;
+    height: 120px!important;
+    border-radius: 12px;
+    border-style: none;
+    margin-left: 24px!important;
+}
+
+.round-pic{
+    border-radius: 50%;
+    border-style: solid;
+    border-width: 3px;
+    border-color: white;
+}
+
+.border-border{
+    width: 162px;
+    height: 162px;
+    border-radius: 50%;
+    border-style: solid;
+    border-width: 20px;
+    border-color: var(--main-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* TIMELINE */
